.metadata/.plugins/org.eclipse.cdt.ui/Lab2_trafikljus.build.log
19:09:56 **** Incremental Build of configuration Debug for project Lab2_trafikljus ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32F401xE -c -I../Core/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc -I../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32F4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'set_traffic_lights':
../Core/Src/main.c:75:17: warning: enumeration value 's_car_stopping' not handled in switch [-Wswitch]
   75 |                 switch(s) {
      |                 ^~~~~~
../Core/Src/main.c:75:17: warning: enumeration value 's_passenger_go' not handled in switch [-Wswitch]
../Core/Src/main.c: At top level:
../Core/Src/main.c:114:1: error: expected identifier or '(' before '}' token
  114 | }
      | ^
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

19:09:56 Build Failed. 2 errors, 2 warnings. (took 322ms)

